Fix: .tex -> .plaintex

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -10,8 +10,8 @@
         "path": "./vue.json"
       },
       {
-        "language": "tex",
-        "path": "./tex.json"
+        "language": "plaintex",
+        "path": "./plaintex.json"
       }
     ]
   }
